--- a/web/pom.xml
+++ b/web/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-firefox-driver</artifactId>
-            <version>2.35.0</version>
+            <version>2.37.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -259,7 +259,7 @@
             <scope>test</scope>
         </dependency>
 	</dependencies>
-	
+
 	<build>
         <finalName>ClinCapture-${project.version}</finalName>
 		<resources>
@@ -514,23 +514,31 @@
                         <groupId>org.codehaus.cargo</groupId>
                         <artifactId>cargo-maven2-plugin</artifactId>
                         <configuration>
-                            <wait>false</wait>
                             <container>
-                                <type>installed</type>
-                                <containerId>tomcat6x</containerId>
-                                <home>${catalina.home}</home>
+                                <containerId>${tomcat.containerId}</containerId>
+                                <artifactInstaller>
+                                    <groupId>org.apache.juddi.bootstrap</groupId>
+                                    <artifactId>apache-tomcat</artifactId>
+                                    <version>${tomcat.version}</version>
+                                </artifactInstaller>
                             </container>
+                            <configuration>
+                                <properties>
+                                    <cargo.servlet.port>${tomcat.servletPort}</cargo.servlet.port>
+                                    <cargo.tomcat.ajp.port>${tomcat.ajpPort}</cargo.tomcat.ajp.port>
+                                </properties>
+                            </configuration>
                         </configuration>
                         <executions>
                             <execution>
-                                <id>start-servet</id>
+                                <id>start-server</id>
                                 <phase>pre-integration-test</phase>
                                 <goals>
                                     <goal>start</goal>
                                 </goals>
                             </execution>
                             <execution>
-                                <id>stop-servet</id>
+                                <id>stop-server</id>
                                 <phase>post-integration-test</phase>
                                 <goals>
                                     <goal>stop</goal>
