--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.clinovo.clincapture</groupId>
     <artifactId>clincapture</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.3.10</version>
+    <version>1.0.3.11-SNAPSHOT</version>
     <name>ClinCapture</name>
     <description>Electronic Data Capture Application for Clinical Trials</description>
 
@@ -816,9 +816,9 @@
     </reporting>
 
     <scm>
-		<connection>scm:svn:https://svn.clinovo.com/clincapture/tags/clincapture-1.0.3.10</connection>
-		<developerConnection>scm:svn:https://svn.clinovo.com/clincapture/tags/clincapture-1.0.3.10</developerConnection>
-		<url>https://trac.clinovo.com/clincapture/browser/tags/clincapture-1.0.3.10</url>
+		<connection>scm:svn:https://svn.clinovo.com/clincapture/trunk</connection>
+		<developerConnection>scm:svn:https://svn.clinovo.com/clincapture/trunk</developerConnection>
+		<url>https://trac.clinovo.com/clincapture/browser/trunk</url>
 	</scm>
 
     <distributionManagement>
