Fixes #863: Administrative application to configure all params in datainfo.properties in the DB. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1030 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -16,3 +16,6 @@ syslog.port=514
 collectStats=true
 usage.stats.host=localhost
 usage.stats.port=514
+
+# Tomcat installation directory
+catalina.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0
