--- a/pom.xml
+++ b/pom.xml
@@ -589,25 +589,33 @@
     </dependencyManagement>
 	<build>
 		<pluginManagement>
-			<plugins>                <plugin>
+			<plugins>                
+				<plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-antrun-plugin</artifactId>
-                    <version>1.4</version>                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.cargo</groupId>
-                    <artifactId>cargo-maven2-plugin</artifactId>                    <version>1.2.4</version>
+                    <version>1.4</version>                
                 </plugin>
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>                    <artifactId>cobertura-maven-plugin</artifactId>
+                    <groupId>org.codehaus.cargo</groupId>
+                    <artifactId>cargo-maven2-plugin</artifactId>                    
+                    <version>1.2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>                    
+                    <artifactId>cobertura-maven-plugin</artifactId>
                     <version>${cobertura.plugin.version}</version>
                     <dependencies>
-                        <dependency>                            <groupId>net.sourceforge.cobertura</groupId>
+                        <dependency>                            
+                        <groupId>net.sourceforge.cobertura</groupId>
                             <artifactId>cobertura</artifactId>
-                            <version>${cobertura.version}</version>
-                        </dependency>                    </dependencies>
+                            <version>${cobertura.version}
+                            </version>
+                        </dependency>                    
+                        </dependencies>
                     <configuration>
                         <formats>
-                            <format>xml</format>                            <format>html</format>
+                            <format>xml</format>                            
+                            <format>html</format>
                         </formats>
                     </configuration>
                 </plugin>				<plugin>
