Fixes 948: Make the log and data directories build configurable. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1033 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/datainfo.properties
+++ b/core/src/main/resources/datainfo.properties
@@ -19,7 +19,22 @@ dbPort=${dbPort}
 dbHost=${dbHost}
 
 ##################################################################
-# 2 - Logging configuration
+# 2 - filePath
+#
+# File Path is the string which declares the
+# repository for all uploaded and generated
+# files in the system, including CRFs and
+# data sets.  The directory should NOT be
+# accessible by the web server.
+#
+# REQUIRED
+##################################################################
+#filePath=c\:\\ClinCapture\\tomcat\\ClinCapture.data\\
+#filePath=${catalina.home}/${WEBAPP.lower}.data/
+filePath=${filePath}
+
+##################################################################
+# 3 - Logging configuration
 #
 # SysLog support has been fully implemented in ClinCapture, but 
 # by default has been turned off.
@@ -42,7 +57,7 @@ syslog.host=${syslog.host}
 syslog.port=${syslog.port}
 
 ##################################################################
-# 3 - Usage statistics configuration
+# 4 - Usage statistics configuration
 #
 # Usage statistics refers to information automatically sent back to ClinCapture.org
 # to help us figure out how well ClinCapture is working and help us improve it in 
