--- a/pom.xml
+++ b/pom.xml
@@ -618,7 +618,8 @@
                             <format>html</format>
                         </formats>
                     </configuration>
-                </plugin>				<plugin>
+                </plugin>
+                <plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.0</version>
