Fixes #940: Enable creation of dynamic groups for other studies. Submitted by igor (reviewed by sergey)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1034 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -1044,9 +1044,9 @@
         <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>UpdateSubjectGroupClassServlet</servlet-name>
+        <servlet-name>updateSubjectGroupClassServlet</servlet-name>
         <display-name>UpdateSubjectGroupClass</display-name>
-        <servlet-class>org.akaza.openclinica.control.managestudy.UpdateSubjectGroupClassServlet</servlet-class>
+        <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>ViewSubjectGroupClassServlet</servlet-name>
@@ -2021,7 +2021,7 @@
         <url-pattern>/CreateSubjectGroupClass</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>UpdateSubjectGroupClassServlet</servlet-name>
+        <servlet-name>updateSubjectGroupClassServlet</servlet-name>
         <url-pattern>/UpdateSubjectGroupClass</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
