Push modified build.properties file
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1035 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -1,21 +1,23 @@
 # Custom db settings
 dbPort=5432
 db=clincapture
-
 dbType=postgres
 dbHost=localhost
 dbUser=clincapture
 dbPass=clincapture
 
-# Log settings
-log.dir=../logs/clincapture
-logLocation=local
-logLevel=error
-syslog.host=localhost
-syslog.port=514
-collectStats=true
-usage.stats.host=localhost
-usage.stats.port=514
-
 # Tomcat installation directory
+catalina.home=/usr/local/tomcat/6
+
+# Repository for uploaded and generated files
 catalina.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0
+
+# Log settings
+logLevel=error
+syslog.port=514
+logLocation=local
+collectStats=true
+usage.stats.port=514
+syslog.host=localhost
+usage.stats.host=localhost
+log.dir=${catalina.home}/logs/clincapture
