Refs #948: Add the file-path back. Skipped in previous commit. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1036 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -6,11 +6,11 @@ dbHost=localhost
 dbUser=clincapture
 dbPass=clincapture
 
-# Tomcat installation directory
-catalina.home=/usr/local/tomcat/6
-
 # Repository for uploaded and generated files
 catalina.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0
+
+# Repository for uploaded and generated files 
+filePath=${catalina.home}/clincapture.data/ 
 
 # Log settings
 logLevel=error
