Fixes #950: Exclude duplicate slf4j dep causing build warnings. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1037 14881f01-568e-124b-961a-bb94932aa8d1

--- a/pom.xml
+++ b/pom.xml
@@ -673,6 +673,9 @@
 							</property>
 						</systemProperties>
 						<argLine>-Xms1024m -Xmx1024m</argLine>
+						<classpathDependencyExcludes>
+							<classpathDependencyExcludes>ch.qos.logback:logback-classic</classpathDependencyExcludes>
+						</classpathDependencyExcludes>
 					</configuration>
 				</plugin>
 				<plugin>
