--- a/web/pom.xml
+++ b/web/pom.xml
@@ -269,6 +269,10 @@
 			<groupId>org.springmodules</groupId>
 			<artifactId>spring-modules-validation</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
