Overwrite incorrect setting for the Jenkins server to deploy
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1039 14881f01-568e-124b-961a-bb94932aa8d1

--- a/build.properties
+++ b/build.properties
@@ -7,7 +7,7 @@ dbUser=clincapture
 dbPass=clincapture
 
 # Repository for uploaded and generated files
-catalina.home=/usr/local/tomcat/6
+catalina.home=C:\\Program Files\\Apache Software Foundation\\Tomcat 6.0
 
 # Repository for uploaded and generated files 
 filePath=${catalina.home}/clincapture.data/ 
