Fixes #406: Allow users to build rules without XML programming. Submitted by sergey and satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1050 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -2177,4 +2177,24 @@
         <servlet-name>randomizeServlet</servlet-name>
         <url-pattern>/randomize</url-pattern>
     </servlet-mapping>
+    
+    <servlet>
+		<servlet-name>studiesServlet</servlet-name>
+        <servlet-class>com.clinovo.servlet.StudiesServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>studiesServlet</servlet-name>
+        <url-pattern>/studies</url-pattern>
+    </servlet-mapping>
+    
+    <servlet>
+		<servlet-name>ruleValidationServlet</servlet-name>
+        <servlet-class>com.clinovo.servlet.RuleValidationServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>ruleValidationServlet</servlet-name>
+        <url-pattern>/rules</url-pattern>
+    </servlet-mapping>
 </web-app>
