--- a/web/pom.xml
+++ b/web/pom.xml
@@ -17,6 +17,14 @@
 	</properties>
 
 	<dependencies>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>com.clinovo.clincapture</groupId>
 			<artifactId>core</artifactId>
