--- a/web/src/main/resources/extract.properties
+++ b/web/src/main/resources/extract.properties
@@ -246,6 +246,14 @@ extract.9.zipName=SPSS_$datasetName_$dateTime.spss
 extract.9.success=Your extract job completed successfully. The file is available for download $linkURL.
 #extract.9.failure=The extract did not complete due to errors. Please contact your system administrator for details.
 
+extract.10.odmType=full
+extract.10.file=copyXML.xsl
+extract.10.fileDescription=SAS Dataset
+extract.10.linkText=Run Now
+extract.10.helpText=SAS Dataset.
+extract.10.location=$exportFilePath/$datasetName/sas_dataset
+extract.10.exportname=odm1.3_full$datasetName_$dateTime.xml
+extract.10.success=The extract completed successfully. The file is available for download $linkURL.
 
 ##############################################################
 # 4. Postprocessing Options
