Fixes #1016: Turn off filtering for RS font files. Submitted by brian
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1138 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -315,6 +315,10 @@
 							<nonFilteredFileExtension>ico</nonFilteredFileExtension>
 							<nonFilteredFileExtension>jpg</nonFilteredFileExtension>
 							<nonFilteredFileExtension>png</nonFilteredFileExtension>
+							<nonFilteredFileExtension>eot</nonFilteredFileExtension>
+							<nonFilteredFileExtension>svg</nonFilteredFileExtension>
+							<nonFilteredFileExtension>ttf</nonFilteredFileExtension>
+							<nonFilteredFileExtension>woff</nonFilteredFileExtension>
 						</nonFilteredFileExtensions>
 						<webResources>
 							<resource>
