--- a/ws-cabig/pom.xml
+++ b/ws-cabig/pom.xml
@@ -130,10 +130,10 @@
 			<groupId>org.dbunit</groupId>
 			<artifactId>dbunit</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-		</dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.jmesa</groupId>
 			<artifactId>jmesa</artifactId>
